chore(eshop): display header, footer, and banner

--- a/apps/eshop/src/app/app.component.html
+++ b/apps/eshop/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>Welcome to my eShop</h1>
-<shoppy-home-page></shoppy-home-page>
-<p> uhhhh</p>
+<ngshop-header></ngshop-header>
+<ui-banner></ui-banner>
+<router-outlet></router-outlet>
+<ngshop-footer></ngshop-footer>
