--- a/apps/eshop/src/app/pages/home-page/home-page.component.html
+++ b/apps/eshop/src/app/pages/home-page/home-page.component.html
@@ -1,2 +1,7 @@
 
 <p class="color-red">home-page works!</p>
+<p-accordion>
+  <p-accordionTab header="Header 1">Content 1</p-accordionTab>
+  <p-accordionTab header="Header 2">Content 2</p-accordionTab>
+  <p-accordionTab header="Header 3">Content 3</p-accordionTab>
+</p-accordion>
